--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,7 +35,7 @@ body .container{
 }
 .input-palp input{
     margin-bottom: 26px;
-    width: 55px;
+    width: 67px;
     text-align: center;
     padding: 10px;
     font-size: 26px;
@@ -49,8 +49,7 @@ body .container{
     text-align: center;
 }
 .palpites h3{
-    margin-top: 20px;
-    
+    margin: 10px 0;    
 }
 #lista-palp, span{
     color: #f1a115;
